--- a/app/assets/styles/modules/_btn.css
+++ b/app/assets/styles/modules/_btn.css
@@ -13,7 +13,11 @@
 	}
 
 	&--large {
-		font-size: 1.25rem;
+		font-size: 1.0rem;
 		padding: 1.1rem 1.9rem;
+
+		@mixin atSmall {
+			font-size: 1.25rem;
+		}
 	}
 }
