--- a/app/assets/styles/modules/_row.css
+++ b/app/assets/styles/modules/_row.css
@@ -1,3 +1,5 @@
+/* -------------- _ROW.CSS -------------- */
+
 .row {
 
 	@mixin clearfix; 
@@ -6,9 +8,16 @@
 		margin-right: -65px;
 	}
 
+	&--gutters-large {
+		margin-right: -100px;
+	}
+
 	&--gutters > div {
 		padding-right: 65px;
+	}
 
+	&--gutters-large > div {
+		padding-right: 100px;
 	}
 
 	&__b-margin-until-medium {
@@ -30,10 +39,14 @@
 			width: 37%;
 		}
 
+		&__medium-6 {
+			float: left;
+			width: 50%;
+		}
+
 		&__medium-8 {
 			float: left;
 			width: 66.66%;
-
 		}
 
 		&__medium-8-smaller {
